исправлена секция ideas

--- a/style.scss
+++ b/style.scss
@@ -53,6 +53,7 @@ $img-dark-clock: "dark-clock.svg";
 .abs-block-first {
     width: 100%;
     background-color: $green;
+    border-radius: 10px;
     @include mixin.flex (center, center, 0);
     padding: 120.5px 0;    
     margin: auto;
@@ -275,6 +276,7 @@ $img-dark-clock: "dark-clock.svg";
 }
 
 .main-title-center {
+    margin-bottom: 5px;
     width: 736px;
     background-color: $white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -868,9 +870,43 @@ $img-dark-clock: "dark-clock.svg";
         }
 
         &-right {
+            width: 296px;
+            height: 360px;
             background-color: $white;
             border-radius: 10px;
             border: 0;
+            position: relative;
+
+            &-first {
+                position: absolute;
+                top: 5%;
+                left: 15%;
+            }
+
+            &-second {
+                position: absolute;
+                top: 19%;
+                right: 15%;
+            }
+
+            &-third {
+                position: absolute;
+                top: 35%;
+                left: 25%;
+            }
+
+            &-fourth {
+                position: absolute;
+                bottom: 33%;
+                right: 25%;
+            }
+
+            &-fifth {
+                position: absolute;   
+                bottom: 10%;
+                left: 35%; 
+            }
+
         }
     }
 }
@@ -1274,11 +1310,15 @@ $img-dark-clock: "dark-clock.svg";
         }
 
         &-bottom {
+            &-title {
+                padding: 12px;
+            }
             width: 100%;
             &-data {
+                padding: 12px;
                 margin-top: 12px;
                 margin-bottom: 12px;
-                width: 177px;
+                width: 189px;
                 height: 15px;
                 @include mixin.flex (space-between, center, 0);
 
@@ -1322,7 +1362,7 @@ $img-dark-clock: "dark-clock.svg";
     }
 
     .inform-part {
-        @include mixin.flex (space-between, center, 16px); 
+        @include mixin.flex (center, center, 16px); 
         flex-direction: row;
         flex-wrap: wrap;
     }
@@ -1549,6 +1589,45 @@ $img-dark-clock: "dark-clock.svg";
                 overflow-y: hidden;
             }
         }
+
+        &-image {
+            position: relative;
+            width: 555px;
+            height: 637px;
+            &-first {
+                position: absolute;          
+                top: 5%;
+                left: 15%;
+            }
+
+            &-second {
+                position: absolute;          
+                top: 19%;
+                right: 15%;
+            }
+
+            &-third {
+                position: absolute;          
+                top: 35%;
+                left: 25%;
+            }
+
+            &-fourth {
+                position: absolute;          
+                bottom: 33%;
+                right: 25%;
+            }
+
+            &-fifth {
+                position: absolute;          
+                bottom: 10%;
+                left: 35%; 
+            }
+        }
+    }
+
+    .ideas-tablet-fourth-image-first-mb {
+        display: none;
     }
 
     .footer {
@@ -2138,12 +2217,6 @@ $img-dark-clock: "dark-clock.svg";
         width: 359px;
         @include mixin.flex (space-between, center, 0);
 
-        &-image {
-            img {
-                width: 271px;
-            }
-        }
-
         &-text {
             width: 80px;
             height: 311px;
@@ -2162,6 +2235,51 @@ $img-dark-clock: "dark-clock.svg";
                 overflow-y: hidden;
             }
         }
+
+        &-image {
+            position: relative;
+            width: 271px;
+            height: 311px;
+            &-first {
+                position: absolute;    
+                width: 45px;
+                height: 45px;      
+                top: 5%;
+                left: 15%;
+            }
+
+            &-second {
+                width: 49.82px;
+                height: 50px;
+                position: absolute;          
+                top: 19%;
+                right: 15%;
+            }
+
+            &-third {
+                position: absolute;   
+                width: 50px;
+                height: 50px;       
+                top: 35%;
+                left: 25%;
+            }
+
+            &-fourth {
+                position: absolute;        
+                width: 50px;
+                height: 50px;  
+                bottom: 33%;
+                right: 25%;
+            }
+
+            &-fifth {
+                position: absolute;     
+                width: 49.82px;
+                height: 38px;     
+                bottom: 10%;
+                left: 35%; 
+            }
+        }
     }
 
     .mobile-footer {
@@ -2170,7 +2288,9 @@ $img-dark-clock: "dark-clock.svg";
         background-color: $black;
         padding: 10px;
         overflow-y: hidden;
-        position: sticky;
+        position: fixed;
+        left: 0;
+        bottom: 0;
 
         &-logo {
             @include mixin.flex (center, center, 6px);
